[package]
name = "me"
version = "0.1.0"
authors = ["Joshua Benuck <joshua_benuck@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.31"
rustyline = "6.2.0"
clap = "2.33.1"
reqwest = "0.10.6"
tokio = { version = "0.2.21", features = [ "macros" ] }
dirs = "3.0.0"
soup = "0.5.0"
